--- a/net-spider-pangraph/net-spider-pangraph.cabal
+++ b/net-spider-pangraph/net-spider-pangraph.cabal
@@ -49,6 +49,7 @@ test-suite spec
   -- default-extensions:   
   -- other-extensions:     
   other-modules:        NetSpider.PangraphSpec
+  build-tool-depends:   hspec-discover:hspec-discover
   build-depends:        base, net-spider-pangraph, text, pangraph, net-spider,
                         hspec >=2.4.4
 
@@ -58,6 +59,7 @@ test-suite doctest
   hs-source-dirs:       test
   ghc-options:          -Wall -fno-warn-unused-imports "-with-rtsopts=-M512m"
   main-is:              DocTest.hs
+  build-tool-depends:   doctest-discover:doctest-discover
   build-depends:        base,
                         doctest >=0.13 && <0.19,
                         doctest-discover >=0.1.0.7 && <0.3
