--- a/stack.yaml
+++ b/stack.yaml
@@ -18,8 +18,7 @@
 #
 # resolver: ./custom-snapshot.yaml
 # resolver: https://example.com/snapshots/2018-01-01.yaml
-resolver: lts-12.26
-## resolver: lts-14.7
+resolver: lts-16.31
 
 # User packages to be built.
 # Various formats can be used as shown in the example below.
@@ -49,12 +48,10 @@ packages:
 # (e.g., acme-missiles-0.3)
 # extra-deps: []
 extra-deps:
-- hspec-need-env-0.1.0.3
-- extended-reals-0.2.3.0
-- greskell-core-0.1.3.0
-- greskell-websocket-0.1.2.0
-- greskell-1.2.0.0
 
+## Starting with ip-1.6, it's difficult to meet its dependency.
+- ip-1.5.1
+  
 ## - pangraph-0.2.1
 
 
@@ -72,8 +69,6 @@ extra-deps:
 ## - contiguous-0.5
 ## - tuples-0.1.0.0
 
-## - data-interval-2.0.1
-- data-interval-1.3.1
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
